<resources>
    <string name="app_name">Dteam_Android_DIA</string>
    <string name="IncomeWith">Income With</string>
    <string name="UpdateIncome"></string>
    <string name="amount_of_money">Amount of money</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="lblIncomeValue">Amount</string>
    <string name="AppIntro">
        We help you manage your finances according to the modern 6-cup method, helping you to divide the necessary parts for spending in life.
    </string>
    <string name="name_pot">Name Pot</string>
    <string name="textview">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
    </string>
    <string name="update_income">Update Income</string>
    <string name="Btn_UpdateIncome">Button Update Income</string>
    <string name="Pot">Pot</string>
    <string name="Btn_History">Button History</string>
    <string name="Btn_Add">Button Add Transaction</string>
    <string name="Btn_Edit">Button Edit Transaction</string>
    <!--    <string-array name="groupItem"></string-array>-->
</resources>