<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    tools:context=".IncomeSetup">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblIncomeWith"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/IncomeWith" />

            <Spinner
                android:id="@+id/spinIncomeRange"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:entries="@array/IncomeRange"
                android:minHeight="48dp"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblIncomeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblIncomeValue" />

            <EditText
                android:id="@+id/editTextNumberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/amount_of_money"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

        </LinearLayout>

        <com.example.dteam_android_dia.PieChart
            android:layout_width="369dp"
            android:layout_height="108dp"
            custom:labelPosition="left"
            custom:showText="true" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/next"
        android:scaleType="center"
        android:src="@drawable/btnnext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>