<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <LinearLayout
        android:id="@+id/layout_avt"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp">

                    <TextView
                        android:id="@+id/txtIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Income"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtIncome_int"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="4000$"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/img_btn_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#00FFFFFF"
                            android:contentDescription="@string/Btn_UpdateIncome"
                            android:src="@drawable/ic_baseline_edit_24"
                            tools:ignore="OnClick,TouchTargetSizeCheck" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <TextView
                        android:id="@+id/txtBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="Balance"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtBalance_int"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="2000$"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/avt" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_avt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="match_parent"
                    android:layout_height="179dp"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/Pot"
                    android:scaleX="2"
                    android:scaleY="3"
                    app:srcCompat="@drawable/pot" />

                <TextView
                    android:id="@+id/txtHu1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NEC"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="match_parent"
                    android:layout_height="179dp"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/IncomeWith"
                    android:scaleX="2"
                    android:scaleY="3"
                    app:srcCompat="@drawable/pot" />

                <TextView
                    android:id="@+id/txtHu2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NEC"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="match_parent"
                    android:layout_height="179dp"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/Pot"
                    android:scaleX="2"
                    android:scaleY="3"
                    app:srcCompat="@drawable/pot" />

                <TextView
                    android:id="@+id/txtHu3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NEC"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="match_parent"
                    android:layout_height="179dp"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/Pot"
                    android:scaleX="2"
                    android:scaleY="3"
                    app:srcCompat="@drawable/pot" />

                <TextView
                    android:id="@+id/txtHu4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NEC"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="match_parent"
                    android:layout_height="179dp"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/Pot"
                    android:scaleX="2"
                    android:scaleY="3"
                    app:srcCompat="@drawable/pot" />

                <TextView
                    android:id="@+id/txtHu5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NEC"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="match_parent"
                    android:layout_height="179dp"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/Pot"
                    android:scaleX="2"
                    android:scaleY="3"
                    app:srcCompat="@drawable/pot" />

                <TextView
                    android:id="@+id/txtHu6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="NEC"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:baselineAlignBottom="false"
                android:clickable="true"
                android:contentDescription="@string/Btn_History"
                android:translationY="0sp"
                app:backgroundTint="#FFFFFF"
                app:srcCompat="@drawable/ic_baseline_hourglass_empty_24"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:alpha="1"
                android:clickable="true"
                android:contentDescription="@string/Btn_Add"
                app:srcCompat="@drawable/ic_baseline_add_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/Btn_Edit"
                app:backgroundTint="#FFFFFF"
                app:srcCompat="@android:drawable/ic_menu_edit"
                tools:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>